--- a/docs/locales/zh_CN/LC_MESSAGES/index.po
+++ b/docs/locales/zh_CN/LC_MESSAGES/index.po
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2018, neoctobers
-# This file is distributed under the same license as the etherscan package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
+# Copyright (C) 2022, @viacheslav-sabadash
+# This file is distributed under the same license as the aioetherscan package.
+# FIRST AUTHOR @neoctobers, 2018.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: etherscan \n"
+"Project-Id-Version: aioetherscan \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-12-05 21:53+0800\n"
+"POT-Creation-Date: 2022-11-11 21:53+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Generated-By: Babel 2.6.0\n"
 
 #: ../../index.rst:3
-msgid "Welcome to etherscan.io API python wapper!"
+msgid "Welcome to etherscan.io API python wrapper!"
 msgstr "中文标题"
 
 #: ../../index.rst:5
